# ag-news-classification

./: .gitignore  README.md  REPORT.md  baseline_lr.py  distilbert_trainer.py  eda.py  pyproject.toml  report.ipynb  text_cnn.py
logs/: baseline.txt  bert.txt  text_cnn.txt
outputs/textcnn/: optuna_trials.csv
wandb/: latest-run
wandb/run-20251005_141501-alim6t5y/: run-alim6t5y.wandb
wandb/run-20251005_182422-6wf72r5c/: run-6wf72r5c.wandb
wandb/run-20251005_182953-b56vpne7/: run-b56vpne7.wandb
wandb/run-20251005_185207-yip1g1ip/: run-yip1g1ip.wandb
wandb/run-20251006_052424-a2k691s1/: run-a2k691s1.wandb
wandb/run-20251006_053210-pn90o903/: run-pn90o903.wandb
wandb/run-20251006_053322-cjmy2hpn/: run-cjmy2hpn.wandb
wandb/run-20251006_054937-p6otox4y/: run-p6otox4y.wandb
wandb/run-20251006_054937-ro1apyvf/: run-ro1apyvf.wandb
wandb/run-20251006_055911-08z5reil/: run-08z5reil.wandb
wandb/run-20251006_061031-3y1kbp9x/: run-3y1kbp9x.wandb
wandb/run-20251006_063639-jn0lppnd/: run-jn0lppnd.wandb
wandb/run-20251006_064839-3lhoo1jy/: run-3lhoo1jy.wandb
wandb/run-20251006_065827-0y6rmuuf/: run-0y6rmuuf.wandb
wandb/run-20251006_065827-g2u1e6v3/: run-g2u1e6v3.wandb
wandb/run-20251006_070611-fygt8t6l/: run-fygt8t6l.wandb
wandb/run-20251006_070611-iuznir0o/: run-iuznir0o.wandb
wandb/run-20251006_070942-4ejt1iyv/: run-4ejt1iyv.wandb
wandb/run-20251006_070942-kv6i5psk/: run-kv6i5psk.wandb
wandb/run-20251006_071334-f9pzcm4g/: run-f9pzcm4g.wandb
wandb/run-20251006_071335-5n6itwuv/: run-5n6itwuv.wandb
(+162 files in other folders)
